// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconIndicators component: Icons not visible 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "justifyContent": "flex-end",
    }
  }
>
  
  
  
</div>
`;

exports[`IconIndicators component: Icons visible and not set 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "justifyContent": "flex-end",
    }
  }
>
  <span
    className="glyphicon glyphicon-pencil"
    onClick={[Function]}
    style={
      Object {
        "color": "var(--reverse-color)",
        "margin": "0px 20px",
      }
    }
    title="icons.no_verse_edits_found"
  />
  <span
    className="glyphicon glyphicon-comment"
    onClick={[Function]}
    style={
      Object {
        "color": "var(--reverse-color)",
        "margin": "0px 20px",
      }
    }
    title="icons.no_comments_found"
  />
  <span
    className="glyphicon glyphicon-bookmark"
    onClick={[Function]}
    style={
      Object {
        "color": "var(--reverse-color)",
        "margin": "0px 20px",
      }
    }
    title="icons.not_bookmarked"
  />
</div>
`;

exports[`IconIndicators component: Icons visible and set 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "justifyContent": "flex-end",
    }
  }
>
  <span
    className="glyphicon glyphicon-pencil"
    onClick={[Function]}
    style={
      Object {
        "color": "var(--highlight-color)",
        "margin": "0px 20px",
      }
    }
    title="icons.verse_edits_found"
  />
  <span
    className="glyphicon glyphicon-comment"
    onClick={[Function]}
    style={
      Object {
        "color": "var(--highlight-color)",
        "margin": "0px 20px",
      }
    }
    title="icons.comments_found"
  />
  <span
    className="glyphicon glyphicon-bookmark"
    onClick={[Function]}
    style={
      Object {
        "color": "var(--highlight-color)",
        "margin": "0px 20px",
      }
    }
    title="icons.bookmarked"
  />
</div>
`;
